use CPPFLAGS, fix minor errors

--- a/CPP00/ex02/Makefile
+++ b/CPP00/ex02/Makefile
@@ -1,12 +1,12 @@
 NAME = job
 
 FILES = Account.cpp tests.cpp
-FLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
 $(NAME):
-	c++ $(FILES) $(FLAGS) -o $(NAME)
+	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
