--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -1,12 +1,12 @@
 NAME = phonebook
 
 FILES = main.cpp PhoneBook.class.cpp Contact.class.cpp
-FLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
 $(NAME):
-	c++ $(FILES) $(FLAGS) -o $(NAME)
+	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
