--- a/CPP01/ex02/Makefile
+++ b/CPP01/ex02/Makefile
@@ -1,12 +1,12 @@
 NAME = ex02
 
 FILES = main.cpp 
-FLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
 $(NAME):
-	c++ $(FILES) $(FLAGS) -o $(NAME)
+	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
