--- a/CPP03/ex00/Makefile
+++ b/CPP03/ex00/Makefile
@@ -5,7 +5,7 @@ CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
-$(NAME):
+$(NAME): ClapTrap.hpp
 	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
 
 clean:
