finish adding WrongAnimal and WrongCat

--- a/CPP04/ex00/Makefile
+++ b/CPP04/ex00/Makefile
@@ -1,11 +1,11 @@
 NAME = ex00
 
-FILES = main.cpp Animal.cpp Dog.cpp Cat.cpp
+FILES = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
-$(NAME): $(FILES) Ex00.hpp Animal.hpp Dog.hpp Cat.hpp
+$(NAME): $(FILES) Ex00.hpp Animal.hpp Dog.hpp Cat.hpp WrongAnimal.hpp WrongCat.hpp
 	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
 
 clean:
