--- a/CPP04/ex00/Makefile
+++ b/CPP04/ex00/Makefile
@@ -6,7 +6,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 all: $(NAME)
 
 $(NAME): $(FILES) Ex00.hpp Animal.hpp Dog.hpp Cat.hpp WrongAnimal.hpp WrongCat.hpp
-	c++ $(FILES) $(CPPFLAGS) -o $(NAME)
+	c++ $(FILES) $(CXXFLAGS) -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
