--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME = ex02
 
-SRC = main.cpp Bureaucrat.cpp AForm.cpp
+SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp
 OBJ = $(SRC:.cpp=.o)
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
@@ -9,7 +9,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	c++ $(OBJ) $(CXXFLAGS) -o $(NAME)
 
-%.o: %.cpp Bureaucrat.hpp AForm.hpp
+%.o: %.cpp Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp
 	c++ $(CXXFLAGS) -c $< -o $@
 
 clean:
@@ -17,6 +17,7 @@ clean:
 
 fclean: clean
 	rm -rf $(NAME)
+	rm -rf *_shrubbery
 
 re: fclean all
 
