--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME = ex02
 
-SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp
+SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp
 OBJ = $(SRC:.cpp=.o)
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
@@ -9,7 +9,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	c++ $(OBJ) $(CXXFLAGS) -o $(NAME)
 
-%.o: %.cpp Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp
+%.o: %.cpp Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp RobotomyRequestForm.hpp
 	c++ $(CXXFLAGS) -c $< -o $@
 
 clean:
